--- a/README
+++ b/README
@@ -1,7 +1,4 @@
-echo "# ETH-rig" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/noahpetrucci/ETH-rig.git
-git push -u origin main
+# ETH-RIG
+Ethereum miner with cool features.
+
+
