--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # ETH-RIG
-Ethereum miner with cool features.
+Ethereum miner with cool features
 ![image_67147009](https://user-images.githubusercontent.com/117952216/204803275-12d0e408-cc0d-4784-8fca-2adbf88047dd.JPG)
 
 
